src/app/(auth)/login/page.module.scss
.form {
  margin: auto;
  margin-top: 100px;
  max-width: 600px;
  width: 100%;
  padding-inline: 20px;
  .signinBtn {
    margin-top: 40px;
    width: 100%;
    background-color: #f58021;
    border: none;
    outline: none;
    height: 48px;
    border-radius: 62px;
    font-size: 18px;
    font-weight: 600;
    color: #ffff;
    cursor: not-allowed;
    transition: 0.4s ease-in-out;
    &:hover {
      background-color: #d26004;
    }
    &:disabled {
      opacity: 0.5;
      cursor: not-allowed;
      background-color: #f58021;
    }
    &:not(:disabled) {
      cursor: pointer;
    }
    &:not(:disabled):hover {
      background-color: #d26004;
    }
  }
  .formGroup {
    label {
      margin-bottom: 10px;
      display: block;
      &::before {
        content: "* ";
        color: red;
      }
    }
    input {
      background-color: transparent;
      margin-bottom: 20px;
      color: black;
      display: block;
      width: 100%;
      height: 50px;
      border-radius: 5px;
      border: 1px solid black;
      padding: 10px;
      font-size: 18px;
    }
    .error {
      color: red;
    }
  }
  .passwordWrapper {
    position: relative;
    button {
      position: absolute;
      top: 50%;
      right: 20px;
      transform: translateY(-50%);
    }
  }
  .checkbox {
    display: flex;
    height: 100%;
    align-items: center;
    gap: 10px;
    justify-content: center;

    input {
      margin-top: 0;
      margin-bottom: 0px;
      height: 15px;
      width: 15px;
    }
    label {
      margin-bottom: 0px;
      &:before {
        content: "";
      }
    }
  }
}

.redirect {
  margin-block: 30px;
  text-align: center;
}
.formSubmitError {
  color: red;
  margin-top: 20px;
  text-align: center;
}

